add 1/2 path of mrkp

--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,1 +1,8 @@
 @import 'header';
+@import 'hero-section';
+@import 'stats-section';
+@import 'about-section';
+@import 'results-section';
+@import 'media-section';
+@import 'help-section';
+@import 'action-section';
