--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,17 +1,24 @@
 .header-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
-  border: 1px solid teal;
+  background-color: var(--background-color);
+
+  & .main-button {
+    width: 142px;
+    height: 54px;
+    font-size: 16px;
+  }
 }
 .page-header {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
+  z-index: 999;
 }
 .main-nav {
   display: flex;
@@ -31,17 +38,4 @@
   .nav-list & + & {
     margin-left: 26px;
   }
-}
-.header-btn_donate {
-  width: 142px;
-  height: 54px;
-  border-radius: 10px;
-
-  font-family: var(--main-fonts);
-  font-size: 16px;
-  line-height: 1.1;
-  color: var(--title-text-color);
-
-  background-color: var(--accent-color);
-  border: none;
 }
