--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,9 +1,20 @@
+.page-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+
+  background-color: var(--background-color);
+}
+
 .header-wrapper {
   display: flex;
   justify-content: space-between;
 
-  padding-top: 15px;
-  padding-bottom: 15px;
+  align-items: center;
+
+  padding-top: 10px;
 
   background-color: var(--background-color);
 
@@ -13,29 +24,43 @@
     font-size: 16px;
   }
 }
-.page-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
-}
+
 .main-nav {
   display: flex;
   align-items: center;
 }
 .nav-list {
   display: flex;
+
+  margin-left: 40px;
   &__link {
     color: var(--primary-text-color);
+
+    transition: color var(--transition-property);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+
+  &__item {
+    font-family: var(--main-fonts);
+    font-size: 17px;
+    line-height: 1.8;
+
+    .nav-list & + & {
+      margin-left: 26px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    display: none;
   }
 }
-.nav-list__item {
-  font-family: var(--main-fonts);
-  font-size: 17px;
-  line-height: 1.8;
 
-  .nav-list & + & {
-    margin-left: 26px;
+@media screen and (min-width: 768px) {
+  .burger-menu {
+    display: none;
   }
 }
