--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -6,3 +6,6 @@
 @import 'media-section';
 @import 'help-section';
 @import 'action-section';
+@import 'testimonials-section';
+@import 'news-section';
+@import 'footer';
