--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,11 +1,12 @@
 :root {
   --background-color: #ffffff;
-  --secondary-bcg-color: #f8f0e3;
+  --secondary-bcg-color: #fef9f2;
 
   --accent-color: #ff9c08;
 
   --text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   --box-shadow: 0px 2px 12px rgba(43, 43, 43, 0.06);
+  --box-shadow-accent: 0px 2px 12px rgba(43, 43, 43, 0.5);
 
   --title-text-color: #090909;
   --primary-text-color: #6e6e6e;
