--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -13,9 +13,18 @@
 
   color: var(--title-text-color);
   background-color: var(--accent-color);
+
+  transition: box-shadow var(--transition-property);
+
+  &:hover,
+  &:focus {
+    color: #fff;
+    box-shadow: var(--box-shadow-accent);
+  }
 }
 
 .secondary-button {
+  display: inline-block;
   box-sizing: border-box;
   padding: 27px 32px;
 
@@ -29,4 +38,13 @@
   border: 1px solid #f0ece8;
   box-shadow: 0px 4px 10px rgba(43, 43, 43, 0.04);
   border-radius: 10px;
+
+  transition: box-shadow var(--transition-property);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
