--- a/src/scss/components/_plyr.scss
+++ b/src/scss/components/_plyr.scss
@@ -20,20 +20,33 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 180px;
-    height: 180px;
+    width: 100px;
+    height: 100px;
 
     border-radius: 100%;
     border: none;
     cursor: pointer;
 
-    opacity: 1;
+    opacity: 0.8;
     transition: opacity 0.3s ease;
 
     svg {
       width: 40px;
       height: 45px;
       margin: auto;
+    }
+
+    transition: box-shadow var(--transition-property);
+
+    &:hover,
+    &:focus {
+      border: 1px solid var(--primary-text-color);
+      box-shadow: var(--box-shadow-accent);
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 180px;
+      height: 180px;
     }
   }
 }
