--- a/test.scss
+++ b/test.scss
@@ -1,2 +1,8 @@
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+}
 @media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1200px) {
 }
