--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,7 +1,6 @@
 .main-button {
   box-sizing: border-box;
-  width: 180px;
-  height: 71px;
+  padding: 10px;
   border-radius: 10px;
   border: none;
 
@@ -26,7 +25,8 @@
 .secondary-button {
   display: inline-block;
   box-sizing: border-box;
-  padding: 27px 32px;
+
+  padding: 10px;
 
   font-family: var(--main-fonts);
   font-size: 18px;
@@ -46,5 +46,28 @@
     color: var(--accent-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+}
+
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+}
+@media screen and (min-width: 768px) {
+  .main-button {
+    padding: 15px;
+  }
+  .secondary-button {
+    padding: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main-button {
+    // width: 180px;
+    // height: 71px;
+    padding: 27px 32px;
+  }
+  .secondary-button {
+    padding: 27px 32px;
   }
 }
