--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,124 +1,3 @@
-.footer {
-  background-color: var(--secondary-bcg-color);
-
-  &__wrapper {
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      justify-content: space-between;
-    }
-  }
-
-  &__logo {
-    padding: 10px;
-    margin-bottom: 30px;
-
-    border-bottom: 1px solid #cbc1b9;
-    & .logo {
-      margin-bottom: 27px;
-      margin-right: 59px;
-    }
-
-    @media screen and (min-width: 1200px) {
-      border-bottom: none;
-      margin-bottom: 0px;
-      margin-right: 19px;
-      border-right: 1px solid #dad1ca;
-    }
-  }
-
-  &__info {
-    margin-bottom: 20px;
-
-    font-family: var(--main-fonts);
-    font-size: 18px;
-    line-height: 30px;
-
-    color: #3f3f3f;
-    @media screen and (min-width: 768px) {
-      margin-bottom: 0px;
-    }
-  }
-
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-
-    &_item {
-      flex-basis: calc(100% / 2 - 28px);
-      margin-bottom: 28px;
-    }
-
-    &_link {
-      font-family: var(--main-fonts);
-      font-size: 18px;
-      line-height: 1.1;
-
-      color: #3f3f3f;
-
-      transition: text-shadow, color var(--transition-property);
-
-      &:hover,
-      &:focus {
-        color: var(--accent-color);
-        text-shadow: var(--text-shadow);
-      }
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-  }
-  @media screen and (min-width: 1200px) {
-    // padding: 140px 24px;
-  }
-
-  &__action {
-    position: relative;
-    overflow: hidden;
-
-    padding: 46px 64px;
-
-    text-align: center;
-
-    border-radius: 14px;
-    background-color: var(--accent-color);
-
-    &_title {
-      margin-bottom: 21px;
-      text-align: start;
-
-      font-family: var(--title-fonts);
-      font-size: 24px;
-      line-height: 1.4;
-
-      color: var(--title-rext-color);
-    }
-
-    & .main-button {
-      box-sizing: border-box;
-      width: 292px;
-      margin-bottom: 18px;
-
-      background-color: #090909;
-      color: #fff;
-
-      transition: color var(--transition-property);
-      transition: background-color var(--transition-property);
-
-      &:hover,
-      &:focus {
-        color: var(--accent-color);
-        background-color: #fff;
-      }
-    }
-
-    & .secondary-button {
-      box-sizing: border-box;
-      width: 292px;
-      background-color: #fff;
-    }
-  }
-}
-
 .footer__action::before,
 .footer__action::after {
   content: '';
@@ -141,4 +20,268 @@
   background-image: url('../img/icons.svg#spot2');
   background-repeat: no-repeat;
   background-size: cover;
+}
+.footer {
+  background-color: var(--secondary-bcg-color);
+
+  &__logo {
+    padding: 10px;
+    margin-bottom: 30px;
+
+    border-bottom: 1px solid #cbc1b9;
+    & .logo {
+      margin-bottom: 27px;
+      margin-right: 59px;
+    }
+  }
+
+  &__info {
+    margin-bottom: 20px;
+
+    font-family: var(--main-fonts);
+    font-size: 14px;
+    line-height: 30px;
+
+    color: #3f3f3f;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+
+    &_item {
+      flex-basis: calc(100% / 2 - 28px);
+      margin-bottom: 18px;
+    }
+
+    &_link {
+      font-family: var(--main-fonts);
+      font-size: 16px;
+      line-height: 1.1;
+
+      color: #3f3f3f;
+
+      transition: text-shadow, color var(--transition-property);
+
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+        text-shadow: var(--text-shadow);
+      }
+    }
+  }
+
+  &__action {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+
+    padding: 26px 34px;
+
+    text-align: center;
+
+    border-radius: 14px;
+    background-color: var(--accent-color);
+
+    &_title {
+      margin-bottom: 21px;
+      text-align: start;
+
+      font-family: var(--title-fonts);
+      font-size: 22px;
+      line-height: 1.4;
+
+      color: var(--title-rext-color);
+    }
+
+    & .main-button {
+      box-sizing: border-box;
+
+      margin-bottom: 18px;
+
+      background-color: #090909;
+      color: #fff;
+
+      transition: color var(--transition-property);
+      transition: background-color var(--transition-property);
+
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+        background-color: #fff;
+      }
+    }
+
+    & .secondary-button {
+      box-sizing: border-box;
+
+      background-color: #fff;
+    }
+  }
+}
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+  .footer {
+    background-color: var(--secondary-bcg-color);
+
+    &__logo {
+      padding: 20px;
+    }
+
+    &__info {
+      font-size: 16px;
+    }
+
+    &__list {
+      justify-content: center;
+
+      &_item {
+        flex-basis: calc(100% / 3 - 28px);
+        margin-bottom: 28px;
+      }
+
+      &_link {
+        font-size: 16px;
+      }
+    }
+
+    &__action {
+      display: flex;
+      flex-direction: column;
+
+      padding: 36px 44px;
+
+      &_title {
+        font-size: 24px;
+      }
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    background-color: var(--secondary-bcg-color);
+
+    &__wrapper {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__logo {
+      padding: 10px;
+      margin-bottom: 30px;
+
+      border-bottom: none;
+      border-right: 1px solid #cbc1b9;
+      & .logo {
+        margin-bottom: 27px;
+        margin-right: 59px;
+      }
+    }
+
+    &__info {
+      margin-bottom: 20px;
+
+      font-family: var(--main-fonts);
+      font-size: 16px;
+      line-height: 30px;
+
+      color: #3f3f3f;
+    }
+
+    &__list {
+      display: flex;
+      flex-direction: column;
+
+      padding: 20px;
+      margin-right: 30px;
+
+      &_item {
+        margin-bottom: 8px;
+      }
+    }
+
+    &__action {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      overflow: hidden;
+
+      padding: 26px 34px;
+
+      text-align: center;
+
+      border-radius: 14px;
+      background-color: var(--accent-color);
+
+      &_title {
+        margin-bottom: 21px;
+        text-align: start;
+
+        font-family: var(--title-fonts);
+        font-size: 22px;
+        line-height: 1.4;
+
+        color: var(--title-rext-color);
+      }
+
+      & .main-button {
+        box-sizing: border-box;
+
+        margin-bottom: 18px;
+
+        background-color: #090909;
+        color: #fff;
+
+        transition: color var(--transition-property);
+        transition: background-color var(--transition-property);
+
+        &:hover,
+        &:focus {
+          color: var(--accent-color);
+          background-color: #fff;
+        }
+      }
+
+      & .secondary-button {
+        box-sizing: border-box;
+
+        background-color: #fff;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer {
+    margin-bottom: 0px;
+    margin-right: 19px;
+
+    &__info {
+      font-size: 18px;
+
+      margin-bottom: 0px;
+    }
+
+    &__list {
+      &_item {
+        margin-bottom: 28px;
+      }
+
+      &_link {
+        font-size: 18px;
+      }
+    }
+
+    &__action {
+      padding: 46px 64px;
+
+      &_title {
+        font-size: 24px;
+
+        & .main-button {
+        }
+      }
+    }
+  }
 }
