--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,11 +7,9 @@
 
   background-color: var(--background-color);
 }
-
 .header-wrapper {
   display: flex;
   justify-content: space-between;
-
   align-items: center;
 
   padding-top: 10px;
@@ -19,48 +17,65 @@
   background-color: var(--background-color);
 
   & .main-button {
-    width: 142px;
-    height: 54px;
-    font-size: 16px;
+    margin-right: 30px;
+
+    font-size: 12px;
   }
 }
-
 .main-nav {
   display: flex;
   align-items: center;
 }
 .nav-list {
-  display: flex;
-
-  margin-left: 40px;
-  &__link {
-    color: var(--primary-text-color);
-
-    transition: color var(--transition-property);
-
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
-  }
-
-  &__item {
-    font-family: var(--main-fonts);
-    font-size: 17px;
-    line-height: 1.8;
-
-    .nav-list & + & {
-      margin-left: 26px;
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    display: none;
-  }
+  display: none;
 }
 
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+}
 @media screen and (min-width: 768px) {
-  .burger-menu {
-    display: none;
+  .header-wrapper {
+    & .main-button {
+      width: 112px;
+      height: 44px;
+      font-size: 14px;
+    }
+  }
+
+  .nav-list {
+    display: flex;
+
+    margin-left: 40px;
+    &__link {
+      color: var(--primary-text-color);
+
+      transition: color var(--transition-property);
+
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+      }
+    }
+
+    &__item {
+      font-family: var(--main-fonts);
+      font-size: 17px;
+      line-height: 1.8;
+
+      .nav-list & + & {
+        margin-left: 26px;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-wrapper {
+    & .main-button {
+      width: 142px;
+      height: 54px;
+      font-size: 16px;
+      padding: 0;
+    }
   }
 }
