--- a/src/scss/layout/_help-section.scss
+++ b/src/scss/layout/_help-section.scss
@@ -1,13 +1,13 @@
 .help-section {
-  padding-top: 200px;
-  padding-bottom: 180px;
+  padding-top: 90px;
+  padding-bottom: 90px;
 
   &__title {
     margin-bottom: 60px;
 
     font-family: var(--title-fonts);
 
-    font-size: 42px;
+    font-size: 32px;
     line-height: 1.4;
 
     color: var(--title-text-color);
@@ -26,24 +26,15 @@
     }
   }
 }
-
 .help-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-
-  margin-top: -28px;
-  margin-left: -28px;
 
   &__item {
     display: block;
-    flex-basis: calc(100% / 3 - 56px);
 
-    padding-left: 10px;
-    padding-right: 10px;
-
-    margin-top: 28px;
-    margin-left: 28px;
+    padding: 10px;
+    margin-bottom: 28px;
 
     text-align: center;
 
@@ -60,30 +51,89 @@
   }
 
   &__icon {
-    margin-top: 57px;
+    margin-top: 24px;
     margin-bottom: 24px;
 
-    width: 172px;
-    height: 172px;
+    width: 120px;
+    height: 120px;
   }
 
   &__title {
     margin-bottom: 11px;
 
     font-family: var(--title-fonts);
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.4;
 
     color: var(--title-text-color);
   }
 
   &__text {
-    margin-bottom: 61px;
+    margin-bottom: 31px;
 
     font-family: var(--main-fonts);
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1.6;
 
     color: var(--primary-text-color);
+  }
+}
+
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+  .help-list {
+    justify-content: space-between;
+
+    &__item {
+      flex-basis: calc(100% / 2 - 28px);
+
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
+    &__icon {
+      width: 142px;
+      height: 142px;
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1200px) {
+  .help-section {
+    padding-top: 200px;
+    padding-bottom: 180px;
+
+    &__title {
+      font-size: 42px;
+    }
+  }
+
+  .help-list {
+    gap: 20px;
+
+    &__item {
+      flex-basis: calc(100% / 3 - 56px);
+
+      padding-left: 20px;
+      padding-right: 20px;
+
+      &__icon {
+        margin-top: 57px;
+        margin-bottom: 54px;
+
+        width: 172px;
+        height: 172px;
+      }
+
+      &__title {
+        font-size: 24px;
+      }
+
+      &__text {
+        font-size: 18px;
+      }
+    }
   }
 }
