--- a/src/scss/layout/_hero-section.scss
+++ b/src/scss/layout/_hero-section.scss
@@ -1,31 +1,25 @@
 .hero-section {
-  @media screen and (min-width: 768px) {
-    display: flex;
-  }
-
   & .main-button {
-    margin-right: 28px;
+    margin-right: 12px;
   }
 }
+
 .hero-img {
   width: 50%;
-  margin-left: 10px;
-
-  @media screen and (min-width: 768px) {
-    width: 100%;
-    margin-left: 43px;
-  }
 }
+
 .hero-description {
   position: relative;
-  margin: auto;
+
   align-items: center;
+  margin-top: 60px;
+  margin-bottom: 28px;
 
   &__title {
-    margin-top: 25px;
+    margin-top: 15px;
     margin-bottom: 16px;
     font-family: var(--title-fonts);
-    font-size: 60px;
+    font-size: 30px;
     line-height: 1.3;
 
     color: var(--title-text-color);
@@ -48,15 +42,78 @@
   }
 
   &__text {
-    margin-bottom: 43px;
+    margin-bottom: 23px;
 
     font-family: var(--main-fonts);
-    font-size: 24px;
+    font-size: 14px;
     line-height: 1.6;
 
     color: var(--primary-text-color);
   }
 }
 
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+  .hero-description {
+    &__title {
+      margin-top: 25px;
+
+      font-size: 40px;
+    }
+
+    &__text {
+      margin-bottom: 43px;
+
+      font-size: 18px;
+    }
+  }
+}
 @media screen and (min-width: 768px) {
+  .hero-section {
+    display: flex;
+    margin-top: 78px;
+
+    & .main-button {
+      margin-right: 28px;
+    }
+  }
+}
+.hero-img {
+  width: 100%;
+  margin-left: 20px;
+}
+
+.hero-description {
+  &__title {
+    margin-top: 25px;
+
+    font-size: 50px;
+  }
+
+  &__text {
+    margin-bottom: 43px;
+
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-img {
+    margin-left: 43px;
+  }
+
+  .hero-description {
+    &__title {
+      margin-top: 25px;
+      margin-bottom: 16px;
+
+      font-size: 60px;
+    }
+
+    &__text {
+      margin-bottom: 43px;
+
+      font-size: 24px;
+    }
+  }
 }
