--- a/src/scss/layout/_media-section.scss
+++ b/src/scss/layout/_media-section.scss
@@ -1,6 +1,6 @@
 .media-wrapper {
-  padding-top: 190px;
-  padding-bottom: 200px;
+  padding-top: 70px;
+  padding-bottom: 100px;
 
   text-align: center;
 
@@ -20,10 +20,10 @@
   background: linear-gradient(to bottom, #ffd4a4 50%, #ffffff 50%);
 
   &__title {
-    margin-bottom: 38px;
+    margin-bottom: 28px;
 
     font-family: var(--title-fonts);
-    font-size: 42px;
+    font-size: 32px;
     line-height: 1.4;
 
     color: var(--title-text-color);
@@ -57,7 +57,7 @@
   }
 }
 .video-container {
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 .media-list {
   display: flex;
@@ -68,7 +68,7 @@
 
   &__title {
     font-family: var(--title-fonts);
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.4;
 
     color: var(--title-text-color);
@@ -77,9 +77,56 @@
   &__text {
     font-family: var(--main-fonts);
 
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1.7;
 
     color: var(--primary-text-color);
   }
+}
+
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+  .media-wrapper {
+    padding-top: 90px;
+    padding-bottom: 120px;
+  }
+  .media-section {
+    &__title {
+      margin-bottom: 38px;
+
+      font-size: 38px;
+    }
+    &__nav {
+      margin-bottom: 64px;
+      & .main-button {
+        margin-right: 28px;
+      }
+    }
+  }
+  .media-list {
+    &__title {
+      font-size: 24px;
+    }
+
+    &__text {
+      font-size: 18px;
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+  .media-wrapper {
+    padding-top: 190px;
+    padding-bottom: 150px;
+  }
+  .media-section {
+    &__title {
+      font-size: 42px;
+    }
+  }
+  .video-container {
+    margin-bottom: 80px;
+  }
+}
+@media screen and (min-width: 1200px) {
 }
