--- a/src/scss/layout/_stats-section.scss
+++ b/src/scss/layout/_stats-section.scss
@@ -1,6 +1,4 @@
 .stats-section {
-  background-color: var(--secondary-bcg-color);
-
   &__title {
     visibility: hidden;
   }
@@ -18,15 +16,17 @@
   border-bottom: 1px solid #dad1ca;
 
   &__item {
-    flex-basis: calc(100% / 4 - 28px);
+    flex-basis: calc(100% / 2 - 28px);
     width: 284px;
 
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    margin-bottom: 18px;
     text-align: center;
 
     font-family: var(--title-fonts);
-    font-size: 60px;
+    font-size: 40px;
     line-height: 1.3;
 
     color: var(--title-text-color);
@@ -39,24 +39,46 @@
   &__articl {
     font-family: var(--main-fonts);
 
-    font-size: 20px;
+    font-size: 16px;
     line-height: 22px;
 
     color: var(--primary-text-color);
   }
+}
 
-  @media screen and (min-width: 480px) {
-    f &__item {
-      margin-bottom: 28px;
-    }
+//****************************media************************
+
+@media screen and (min-width: 480px) {
+  .stats-list {
+    padding-top: 30px;
+    padding-bottom: 50px;
   }
-  @media screen and (min-width: 768px) {
-    justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .stats-list {
+    padding-top: 0;
+    padding-bottom: 10px;
   }
-  @media screen and (min-width: 1200px) {
+}
+@media screen and (min-width: 1200px) {
+  .stats-section {
+    background-color: var(--secondary-bcg-color);
+  }
+
+  .stats-list {
     flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 30px;
+    padding-bottom: 100px;
+
     &__item {
-      margin-bottom: 0px;
+      flex-basis: calc(100% / 4 - 28px);
+
+      font-size: 60px;
+    }
+
+    &__articl {
+      font-size: 20px;
     }
   }
 }
