--- a/src/scss/layout/_testimonials-section.scss
+++ b/src/scss/layout/_testimonials-section.scss
@@ -1,36 +1,26 @@
 .testimonials-section {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 90px;
+  padding-bottom: 90px;
+
+  margin-bottom: 60px;
 
   background-color: var(--secondary-bcg-color);
-
-  @media screen and (min-width: 768px) {
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding-top: 200px;
-    padding-bottom: 200px;
-  }
 }
-
 .testimonials {
   &__overlay {
     position: relative;
-  }
-
-  &__description {
-    @media screen and (min-width: 768px) {
-      width: 538px;
-      margin-left: 107px;
+    &:hover .testimonials__article,
+    &:focus .testimonials__article {
+      opacity: 1;
     }
   }
 
   &__title {
+    margin-top: 28px;
     margin-bottom: 24px;
 
     font-family: var(--title-fonts);
-    font-size: 42px;
+    font-size: 32px;
     line-height: 1.4;
 
     color: var(--title-text-color);
@@ -49,54 +39,48 @@
   }
 
   &__text {
-    margin-bottom: 12px;
+    margin-bottom: 28px;
 
     font-family: var(--main-fonts);
-    font-size: 17px;
+    font-size: 14px;
     line-height: 1.8;
 
     color: var(--primary-text-color);
   }
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    align-items: center;
-  }
 }
-
 .testimonials-list {
-  margin-bottom: 48px;
+  margin-bottom: 28px;
 
   &__item {
     display: flex;
     align-items: center;
 
-    margin-bottom: 20px;
-
     font-family: var(--main-fonts);
-    font-size: 18px;
+    font-size: 14px;
     line-height: 20px;
 
     color: var(--title-text-color);
   }
   &__icon {
-    width: 26px;
-    height: 26px;
+    width: 16px;
+    height: 16px;
 
-    margin-right: 25px;
+    margin-right: 15px;
   }
 }
-
 .testimonials__article {
   display: block;
   box-sizing: border-box;
 
-  width: 398px;
+  width: 100%;
   padding: 10px 20px;
 
   position: absolute;
-  top: 70%;
-  left: 0;
+  bottom: 0;
+  right: 0;
+
+  opacity: 0;
+  transition: opacity var(--transition-property);
 
   background: var(--background-color);
   border: 1px solid #f0ece8;
@@ -131,17 +115,69 @@
 
     color: var(--primary-text-color);
   }
+}
 
-  @media screen and (min-width: 768px) {
-    padding: 20px 30px;
+//****************************media************************
 
-    top: 80%;
+@media screen and (min-width: 480px) {
+}
+@media screen and (min-width: 768px) {
+  .testimonials {
+    display: flex;
+    align-items: center;
+    &__description {
+      width: 50%;
+      margin-left: 57px;
+    }
+
+    &__title {
+      font-size: 30px;
+    }
+
+    &__text {
+      font-size: 14px;
+    }
   }
-  @media screen and (min-width: 1200px) {
+  .testimonials__article {
+    bottom: -5%;
+    right: -10%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .testimonials-section {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+
+  .testimonials {
+    &__title {
+      font-size: 42px;
+    }
+
+    &__text {
+      font-size: 17px;
+    }
+  }
+
+  .testimonials-list {
+    &__item {
+      margin-bottom: 28px;
+
+      font-size: 18px;
+    }
+    &__icon {
+      width: 26px;
+      height: 26px;
+
+      margin-right: 25px;
+    }
+  }
+
+  .testimonials__article {
     width: 398px;
     padding: 40px 60px;
 
-    top: 62%;
-    left: 43%;
+    bottom: -5%;
+    right: -5%;
   }
 }
