--- a/src/scss/layout/_action-section.scss
+++ b/src/scss/layout/_action-section.scss
@@ -71,14 +71,14 @@
 }
 @media screen and (min-width: 1200px) {
   .action-section {
-    //   max-width: 1100px;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     padding-top: 160px;
     padding-bottom: 160px;
+
+    margin-bottom: 40px;
   }
 
   .action-section__title {
